tests/ui/substrate/error/fail_multiple_critical.stderr
error: only one enum variant can be marked as `#[obce(critical)]`
 --> tests/ui/substrate/error/fail_multiple_critical.rs:1:1
  |
1 | #[obce::error]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `obce::error` (in Nightly builds, run with -Z macro-backtrace for more info)
